--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -10,10 +10,10 @@
     <ion-card class="welcome-card">
       <img src="/assets/shapes.svg" alt="" />
       <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
+        <ion-card-subtitle style="color: var(--ion-color-white)">Get Started</ion-card-subtitle>
+        <ion-card-title style="color: var(--ion-color-purple)">Welcome to Ionic</ion-card-title>
       </ion-card-header>
-      <ion-card-content>
+      <ion-card-content style="color: var(--ion-color-white)">
         <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
       </ion-card-content>
     </ion-card>
