--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,4 +74,47 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  --ion-color-background: #181D27;
+  --ion-color-background-rgb: 24,29,39;
+  --ion-color-background-contrast: #ffffff;
+  --ion-color-background-contrast-rgb: 255,255,255;
+  --ion-color-background-shade: #151a22;
+  --ion-color-background-tint: #2f343d;
+
+  --ion-color-dark-green: #1A3A3A;
+  --ion-color-dark-green-rgb: 26,58,58;
+  --ion-color-dark-green-contrast: #ffffff;
+  --ion-color-dark-green-contrast-rgb: 255,255,255;
+  --ion-color-dark-green-shade: #173333;
+  --ion-color-dark-green-tint: #314e4e;
+
+  --ion-color-pink: #F0BCD4;
+  --ion-color-pink-rgb: 240,188,212;
+  --ion-color-pink-contrast: #000000;
+  --ion-color-pink-contrast-rgb: 0,0,0;
+  --ion-color-pink-shade: #d3a5bb;
+  --ion-color-pink-tint: #f2c3d8;
+
+  --ion-color-navy: #4F517D;
+  --ion-color-navy-rgb: 79,81,125;
+  --ion-color-navy-contrast: #ffffff;
+  --ion-color-navy-contrast-rgb: 255,255,255;
+  --ion-color-navy-shade: #46476e;
+  --ion-color-navy-tint: #61628a;
+
+  --ion-color-purple: #A997DF;
+  --ion-color-purple-rgb: 169,151,223;
+  --ion-color-purple-contrast: #000000;
+  --ion-color-purple-contrast-rgb: 0,0,0;
+  --ion-color-purple-shade: #9585c4;
+  --ion-color-purple-tint: #b2a1e2;
+
+  --ion-color-white: #ffffff;
+  --ion-color-white-rgb: 255,255,255;
+  --ion-color-white-contrast: #000000;
+  --ion-color-white-contrast-rgb: 0,0,0;
+  --ion-color-white-shade: #e0e0e0;
+  --ion-color-white-tint: #ffffff;
+
 }
