--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,74 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+.ion-color-purple {
+    --ion-color-base: var(--ion-color-purple);
+    --ion-color-base-rgb: var(--ion-color-purple-rgb);
+    --ion-color-contrast: var(--ion-color-purple-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-purple-contrast-rgb);
+    --ion-color-shade: var(--ion-color-purple-shade);
+    --ion-color-tint: var(--ion-color-purple-tint);
+}
+
+.ion-color-navy {
+    --ion-color-base: var(--ion-color-navy);
+    --ion-color-base-rgb: var(--ion-color-navy-rgb);
+    --ion-color-contrast: var(--ion-color-navy-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-navy-contrast-rgb);
+    --ion-color-shade: var(--ion-color-navy-shade);
+    --ion-color-tint: var(--ion-color-navy-tint);
+}
+
+.ion-color-pink {
+    --ion-color-base: var(--ion-color-pink);
+    --ion-color-base-rgb: var(--ion-color-pink-rgb);
+    --ion-color-contrast: var(--ion-color-pink-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-pink-contrast-rgb);
+    --ion-color-shade: var(--ion-color-pink-shade);
+    --ion-color-tint: var(--ion-color-pink-tint);
+}
+
+.ion-color-dark-green {
+    --ion-color-base: var(--ion-color-dark-green);
+    --ion-color-base-rgb: var(--ion-color-dark-green-rgb);
+    --ion-color-contrast: var(--ion-color-dark-green-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-dark-green-contrast-rgb);
+    --ion-color-shade: var(--ion-color-dark-green-shade);
+    --ion-color-tint: var(--ion-color-dark-green-tint);
+}
+
+.ion-color-background {
+    --ion-color-base: var(--ion-color-background);
+    --ion-color-base-rgb: var(--ion-color-background-rgb);
+    --ion-color-contrast: var(--ion-color-background-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-background-contrast-rgb);
+    --ion-color-shade: var(--ion-color-background-shade);
+    --ion-color-tint: var(--ion-color-background-tint);
+}
+
+.ion-color-white {
+    --ion-color-base: var(--ion-color-white);
+    --ion-color-base-rgb: var(--ion-color-white-rgb);
+    --ion-color-contrast: var(--ion-color-white-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-white-contrast-rgb);
+    --ion-color-shade: var(--ion-color-white-shade);
+    --ion-color-tint: var(--ion-color-white-tint);
+}
+
+
+* {
+    --ion-background-color: var(--ion-color-background);
+    --ion-background-color-rgb: var(--ion-color-background-rgb);
+    --ion-text-color: var(--ion-color-white);
+    --ion-text-color-rgb: var(--ion-color-white-rgb);
+    --ion-tab-bar-color-activated: var(--ion-color-purple);
+    --ion-item-color: var(--ion-color-white);
+    --ion-box-shadow-color: rgba(65,65,65,.11);
+}
+
+ion-card {
+    box-shadow: 0 4px 16px rgba(65,65,65,.11) !important;
+    border-radius: 30px !important;
+}
